--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "dependencies": {
     "@nativescript/core": "~8.1.1",
     "@nativescript/theme": "~3.0.1",
+    "nativescript-status-bar": "^1.2.0",
     "svelte-native": "~1.0.0"
   },
   "devDependencies": {
+    "@nativescript/android": "8.1.1",
     "@nativescript/types": "~8.1.1",
     "@nativescript/webpack": "~5.0.0",
+    "prettier": "^2.5.0",
+    "prettier-plugin-svelte": "^2.5.0",
     "svelte": "~3.44.0",
     "svelte-loader": "^3.1.2",
     "svelte-native-preprocessor": "^1.0.0",
